; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_doublest.c_store_floating_by_length.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_doublest.c_store_floating_by_length.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.floatformat = type { i32 }

@.str = private unnamed_addr constant [49 x i8] c"Can't store a floating-point number of %d bytes.\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32, i32)* @store_floating_by_length to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @store_floating_by_length(i8* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.floatformat*, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* %5, align 4
  %9 = call %struct.floatformat* @floatformat_from_length(i32 %8)
  store %struct.floatformat* %9, %struct.floatformat** %7, align 8
  %10 = load %struct.floatformat*, %struct.floatformat** %7, align 8
  %11 = icmp eq %struct.floatformat* %10, null
  br i1 %11, label %12, label %18

12:                                               ; preds = %3
  %13 = load i32, i32* %5, align 4
  %14 = call i32 @warning(i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str, i64 0, i64 0), i32 %13)
  %15 = load i8*, i8** %4, align 8
  %16 = load i32, i32* %5, align 4
  %17 = call i32 @memset(i8* %15, i32 0, i32 %16)
  br label %22

18:                                               ; preds = %3
  %19 = load %struct.floatformat*, %struct.floatformat** %7, align 8
  %20 = load i8*, i8** %4, align 8
  %21 = call i32 @floatformat_from_doublest(%struct.floatformat* %19, i32* %6, i8* %20)
  br label %22

22:                                               ; preds = %18, %12
  ret void
}

declare dso_local %struct.floatformat* @floatformat_from_length(i32) #1

declare dso_local i32 @warning(i8*, i32) #1

declare dso_local i32 @memset(i8*, i32, i32) #1

declare dso_local i32 @floatformat_from_doublest(%struct.floatformat*, i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
